--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_BACKEND_URL="https://symmetrical-engine-wpxr76rqw5wh6w4-3001.app.github.dev/api/v1"
+VITE_BACKEND_URL="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev/api/v1"
 PORT=5173
-FRONTEND_URL="https://symmetrical-engine-wpxr76rqw5wh6w4-5173.app.github.dev"
-VITE_GRAPHQL_URL="https://symmetrical-engine-wpxr76rqw5wh6w4-3001.app.github.dev/graphql"
+FRONTEND_URL="https://musical-memory-456j74j5qwpcqr9x-5173.app.github.dev"
+VITE_GRAPHQL_URL="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev/graphql"
+VITE_SOCKET_HOST="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev"
