--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.0",
     "slug": "^8.2.3",
+    "socket.io-client": "^4.8.1",
     "victory": "^36.9.1"
   },
   "devDependencies": {
