feat: notifications and code comments added

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_BACKEND_URL="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev/api/v1"
+VITE_BACKEND_URL="http://localhost:3000/api/v1"
 PORT=5173
-FRONTEND_URL="https://musical-memory-456j74j5qwpcqr9x-5173.app.github.dev"
-VITE_GRAPHQL_URL="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev/graphql"
-VITE_SOCKET_HOST="https://musical-memory-456j74j5qwpcqr9x-3000.app.github.dev"
+FRONTEND_URL="http://localhost:5173"
+VITE_GRAPHQL_URL="http://localhost:3000/graphql"
+VITE_SOCKET_HOST="http://localhost:3000"
