--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
 DATABASE_URL=mongodb://localhost:27017/recipes
 JWT_SECRET=replace-with-random-secret
-FRONTEND_ORIGIN=https://musical-memory-456j74j5qwpcqr9x-5173.app.github.dev
+FRONTEND_ORIGIN=http://localhost:5173
