--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
+    "@apollo/client": "3.9.5",
     "@tanstack/react-query": "^5.12.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
